--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,4 +38,14 @@
         app:layout_constraintStart_toEndOf="@+id/buttonClick"
         app:layout_constraintTop_toBottomOf="@id/imageView" />
 
+    <Button
+        android:id="@+id/buttonRotateImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/label_roate_image"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/buttonClick" />
 </androidx.constraintlayout.widget.ConstraintLayout>
